defconfig: begonia: Disable HMP configs
We don't want MTK Hybrid scheduler (HMP + EAS) which is useless on 4.14

--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -196,11 +196,7 @@ CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
 CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
-CONFIG_SCHED_HMP=y
-CONFIG_MTK_SCHED_BOOST=y
-CONFIG_MTK_SCHED_RQAVG_KS=y
-CONFIG_MTK_SCHED_RQAVG_US=y
-CONFIG_MTK_SCHED_CPULOAD=y
+# CONFIG_SCHED_HMP is not set
 CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT=y
 CONFIG_MTK_AUDIODSP_SUPPORT=y
 CONFIG_MTK_RAM_CONSOLE=y
