--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -487,6 +487,7 @@ CONFIG_BLK_WBT_MQ=n
 CONFIG_WLAN_DRV_BUILD_IN=y
 CONFIG_MTK_SYSTRACKER_V2=n
 CONFIG_MTK_SYSTRACKER_DISABLE=y
+# CONFIG_PRINTK_MT_PREFIX is not set
 # ERRATUM
 # CONFIG_FSL_ERRATUM_A008585 is not set
 # CONFIG_HISILICON_ERRATUM_161010101 is not set
