--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -400,6 +400,7 @@ CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
+CONFIG_LEDS_TRIGGER_BACKLIGHT=y
 CONFIG_MT6360_PMU_RGBLED=y
 CONFIG_LAST_TOUCH_EVENTS=y
 # CONFIG_RTC_SYSTOHC is not set
