--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -490,3 +490,4 @@ CONFIG_BLK_WBT_SQ=y
 CONFIG_BLK_WBT_MQ=n
 CONFIG_WLAN_DRV_BUILD_IN=y
 CONFIG_MTK_SYSTRACKER_V2=n
+CONFIG_MTK_SYSTRACKER_DISABLE=y
