--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -61,7 +61,7 @@ CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_DEVELOPER_WARNINGS=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
-CONFIG_CFG80211_INTERNAL_REGDB=y
+# CONFIG_CFG80211_INTERNAL_REGDB is not set
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_ZRAM=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
