kernel: power: Disable MTK CPU perf trackers
* Unneeded CPU perf tracking gimmicks

--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -215,12 +215,12 @@ CONFIG_TCPC_CLASS=y
 CONFIG_USB_POWER_DELIVERY=y
 CONFIG_MTK_LOAD_TRACKER=y
 CONFIG_MTK_CPU_CTRL_CFP=y
-CONFIG_MTK_PERF_OBSERVER=y
+# CONFIG_MTK_PERF_OBSERVER is not set
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
-CONFIG_MTK_PERF_TRACKER=y
-CONFIG_MTK_LOWMEM_HINT=y
+# CONFIG_MTK_PERF_TRACKER is not set
+# CONFIG_MTK_LOWMEM_HINT is not set
 CONFIG_MTPROF=y
 CONFIG_ANDROID_DEFAULT_SETTING=y
 CONFIG_MTK_ANDROID_DEFAULT_SETTING=y
@@ -454,8 +454,8 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_FAULT_INJECTION=y
-CONFIG_ENABLE_DEFAULT_TRACERS=y
-CONFIG_MTK_SCHED_TRACERS=y
+# CONFIG_ENABLE_DEFAULT_TRACERS is not set
+# CONFIG_MTK_SCHED_TRACERS is not set
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_CRYPTO_TWOFISH=y
