--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -208,8 +208,8 @@ CONFIG_MTK_TYPEC_WATER_DETECT=y
 CONFIG_MTK_TYPEC_WATER_DETECT_BY_PCB=y
 CONFIG_TCPC_CLASS=y
 CONFIG_USB_POWER_DELIVERY=y
-CONFIG_MTK_LOAD_TRACKER=y
-CONFIG_MTK_CPU_CTRL_CFP=y
+# CONFIG_MTK_LOAD_TRACKER is not set
+# CONFIG_MTK_CPU_CTRL_CFP is not set
 # CONFIG_MTK_PERF_OBSERVER is not set
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
