defconfig: begonia: Remove k85v1_64 from dtbo list
- Stock dtbo only use begonia specific dtb overlay

Change-Id: I1980c124f12b74d7ed38dc6f83b889050ecb7eec

--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -54,7 +54,7 @@ CONFIG_PROC_BEGONIA_CMDLINE=y
 CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6785"
-CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/begonia mediatek/k85v1_64"
+CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/begonia"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
