defconfig: begonia: Disable debugfs and dynamic debug
It's useless on non debug build, even MediaTek started to disable it on newer kernel

Change-Id: Ia30d1a1a6af336c3a78a1f8f7038e51f806ac8c7

--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -277,7 +277,6 @@ CONFIG_KPD_PWRKEY_USE_PMIC=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_NVT_DEBUG_FS=y
 CONFIG_TOUCHSCREEN_NT36xxx_HOSTDL_SPI_G7=y
 CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT1151"
 CONFIG_TOUCHSCREEN_XIAOMI_TOUCHFEATURE=y
@@ -401,6 +400,7 @@ CONFIG_MTK_EMMC_SUPPORT=y
 CONFIG_MTK_EMMC_CACHE=y
 CONFIG_MTK_EMMC_SUPPORT_OTP=y
 CONFIG_MTK_EMMC_HW_CQ=y
+# CONFIG_MTK_MMC_DEBUG is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_TRIGGERS=y
@@ -437,6 +437,7 @@ CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+# CONFIG_SDFAT_DEBUG is not set
 CONFIG_TMPFS=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
@@ -446,10 +447,7 @@ CONFIG_PSTORE_RAM=y
 CONFIG_NLS_CODEPAGE_950=y
 CONFIG_NLS_ASCII=y
 CONFIG_PRINTK_TIME=y
-CONFIG_DYNAMIC_DEBUG=y
-CONFIG_DEBUG_INFO=y
 CONFIG_FRAME_WARN=2800
-CONFIG_DEBUG_FS=y
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
