--- a/arch/arm64/configs/begonia_user_defconfig
+++ b/arch/arm64/configs/begonia_user_defconfig
@@ -1,5 +1,5 @@
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-test"
 # CONFIG_FHANDLE is not set
 CONFIG_TASK_DELAY_ACCT=y
 CONFIG_IKHEADERS=m
@@ -75,6 +75,7 @@ CONFIG_CFG80211_DEVELOPER_WARNINGS=y
 CONFIG_NFC=y
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_ZRAM=y
+CONFIG_ZRAM_WRITEBACK=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_SIMTRAY_STATUS=y
 CONFIG_MEDIATEK_SOLUTION=y
